--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "gatsby": "^3.0.1",
@@ -29,6 +30,7 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
 }
