--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
+    "@types/multer": "^1.4.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
